--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_login.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_login.xml
@@ -11,13 +11,13 @@
         android:layout_width="0dp"
         android:layout_height="38dp"
         android:layout_marginStart="86dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="38dp"
         android:layout_marginEnd="86dp"
         android:ems="10"
         android:hint="@string/username_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@id/textView2" />
 
     <EditText
         android:id="@+id/login_password_field"
@@ -40,7 +40,7 @@
         android:layout_width="0dp"
         android:layout_height="181dp"
         android:layout_marginStart="116dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="116dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -76,5 +76,17 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/goto_signup_button"
         app:layout_constraintTop_toBottomOf="@+id/login_password_field" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/demo"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
