--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_profile.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_profile.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ProfileActivity">
-
+    tools:context=".ProfileActivity"
+    android:id="@+id/profileLayout">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="wrap_content"
@@ -80,13 +83,6 @@
             app:srcCompat="@drawable/badge_4" />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="51dp"
-        android:layout_height="52dp"
-        android:onClick="onBackButtonClick"
-        app:srcCompat="@drawable/agora_btn_back_black" />
-
     <TextView
         android:id="@+id/username"
         android:layout_width="wrap_content"
@@ -95,6 +91,12 @@
         android:layout_centerHorizontal="true"
         android:text="TextView"
         android:textSize="34sp" />
-
-
 </RelativeLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/navigation_menu">
+    </com.google.android.material.navigation.NavigationView>
+</androidx.drawerlayout.widget.DrawerLayout>
