--- a/VirtualWorkoutV2/app/src/main/res/menu/navigation_menu.xml
+++ b/VirtualWorkoutV2/app/src/main/res/menu/navigation_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/nav_home"
+        android:title="Home"
+        android:onClick="onHomeClick"/>
+
+    <item
         android:id="@+id/nav_profile"
         android:title="Profile"
         android:onClick="onProfileClick"/>
