--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_end_screen.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_end_screen.xml
@@ -6,14 +6,15 @@
     android:layout_height="match_parent">
 
 
-        <TextView
-            android:id="@+id/textview4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:gravity="center"
-            android:text="@string/end"
-            android:textSize="20sp" />
+    <TextView
+        android:id="@+id/textview4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/small_video_view_dock"
+        android:layout_marginTop="50dp"
+        android:gravity="center"
+        android:text="@string/end"
+        android:textSize="20sp" />
 
         <ImageView
             android:id="@+id/progressbar1"
