implemented bjørn videos

--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_inbetween_workouts.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_inbetween_workouts.xml
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
+        android:layout_below="@id/progress_text"
         android:gravity="center"
         android:text="@string/congrats"
         android:textSize="21sp" />
@@ -46,7 +46,7 @@
         android:id="@+id/next_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/progress_text"
+        android:layout_below="@id/grats"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:text="@string/next_up"
@@ -67,7 +67,7 @@
         android:id="@+id/progress_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textview4"
+        android:layout_below="@id/text_view_countdown"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:text="poop"
