--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_exercise_complete.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_exercise_complete.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:text="TextView"
+        android:text="@string/You_got"
         android:textAlignment="center"
         android:textSize="24sp" />
 
