--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_signup.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_signup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".SignUpActivity">
 
     <EditText
         android:id="@+id/sign_up_user_name_field"
@@ -62,32 +62,32 @@
         app:layout_constraintTop_toBottomOf="@+id/sign_up_password_field" />
 
     <Button
-        android:id="@+id/goto_signup_button"
+        android:id="@+id/signup_button"
         android:layout_width="114dp"
         android:layout_height="38dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="28dp"
         android:background="@drawable/button1"
-        android:onClick="onSignUpClick"
+        android:onClick="onSignUpNextClick"
         android:text="@string/login_button"
-        app:layout_constraintEnd_toStartOf="@+id/login_button"
+        app:layout_constraintEnd_toStartOf="@+id/go_to_login_button"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sign_up_confirm_password_field"
         app:strokeColor="#00FF0404" />
 
     <Button
-        android:id="@+id/login_button"
+        android:id="@+id/go_to_login_button"
         android:layout_width="114dp"
         android:layout_height="38dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="50dp"
         android:background="@drawable/button1"
-        android:onClick="onLoginNextClick"
+        android:onClick="onSignUpNextClick"
         android:text="@string/signup_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/goto_signup_button"
+        app:layout_constraintStart_toEndOf="@+id/signup_button"
         app:layout_constraintTop_toBottomOf="@+id/sign_up_confirm_password_field" />
 
     <TextView
